--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.5.2",
     "react-slick": "^0.30.2",
     "reactflow": "^11.11.4",
+    "recharts": "^3.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "slick-carousel": "^1.8.1"
