--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "puppeteer": "^24.11.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-grid-layout": "^1.5.2",
     "react-hot-toast": "^2.5.2",
+    "react-resizable": "^3.0.5",
     "react-slick": "^0.30.2",
     "reactflow": "^11.11.4",
     "recharts": "^3.0.0",
@@ -44,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-grid-layout": "^1.3.5",
     "@types/react-slick": "^0.23.13",
     "gh-pages": "^6.3.0",
     "postcss": "^8",
