--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "touch out/.nojekyll && gh-pages -d out --dotfiles"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@iconify/icons-ion": "^1.2.10",
     "@iconify/react": "^5.0.1",
     "aos": "^2.3.4",
@@ -34,6 +35,7 @@
     "react-hot-toast": "^2.5.2",
     "react-resizable": "^3.0.5",
     "react-slick": "^0.30.2",
+    "react-tooltip": "^5.29.1",
     "reactflow": "^11.11.4",
     "recharts": "^3.0.0",
     "remark": "^15.0.1",
