--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.4",
     "@iconify/icons-ion": "^1.2.10",
     "@iconify/react": "^5.0.1",
+    "@types/socket.io-client": "^1.4.36",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "dagre": "^0.8.5",
@@ -37,10 +38,11 @@
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.29.1",
     "reactflow": "^11.11.4",
-    "recharts": "^3.0.0",
+    "recharts": "^3.0.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
