--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
         "name": "next"
       }
     ],
+    "target": "es2017",
+    "downlevelIteration": true,
     "paths": {
       "@/*": [
         "./src/*"
