--- a/vercel.json
+++ b/vercel.json
@@ -32,42 +32,19 @@
           "value": "camera=(), microphone=(), geolocation=()"
         }
       ]
-    },
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-Requested-With, Content-Type, Authorization"
-        }
-      ]
-    }
-  ],
-  "redirects": [
-    {
-      "source": "/dashboard",
-      "destination": "/indexing",
-      "permanent": false
     }
   ],
   "rewrites": [
     {
-      "source": "/api/backend/(.*)",
-      "destination": "https://your-backend-url.a.run.app/api/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     }
   ],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "https://your-backend-url.a.run.app",
-    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "your-firebase-project-id",
-    "NEXT_PUBLIC_GOOGLE_CLIENT_ID": "your-google-client-id",
-    "NEXT_PUBLIC_ENVIRONMENT": "production"
-  }
+  "redirects": [
+    {
+      "source": "/uptime",
+      "destination": "/uptime/monitors",
+      "permanent": false
+    }
+  ]
 } 
