--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,11 @@
       "use": "@vercel/next"
     }
   ],
+  "functions": {
+    "src/app/api/js-rendering/route.ts": {
+      "maxDuration": 60
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
