--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "framer-motion": "^11.18.2",
     "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.517.0",
     "next": "14.2.4",
@@ -36,6 +38,7 @@
     "react-dom": "^18",
     "react-grid-layout": "^1.5.2",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.6.0",
     "react-resizable": "^3.0.5",
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.29.1",
