--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/socket.io-client": "^1.4.36",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "critters": "^0.0.25",
     "dagre": "^0.8.5",
     "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
