--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "predeploy": "npm run build",
     "deploy": "touch out/.nojekyll && gh-pages -d out --dotfiles",
-    "postinstall": "npx playwright install chromium"
+    "postinstall": "npx playwright install chromium",
+    "analyze": "BUNDLE_ANALYZE=both next build"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -50,6 +51,7 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.30",
     "@types/aos": "^3.0.7",
     "@types/dagre": "^0.7.52",
     "@types/file-saver": "^2.0.7",
