feat: Comprehensive JS Rendering Tester upgrade with advanced analysis features
- Added element-level DOM diff analysis with visual highlighting
- Implemented SEO tag analysis (title, meta, canonical, OpenGraph, Twitter)
- Added content visibility comparison and cloaking detection
- Enhanced resource loading analysis (scripts, images, links)
- Integrated accessibility comparison (ARIA, alt text)
- Added structured data analysis (JSON-LD, Microdata, RDFa)
- Implemented crawlability analysis (robots, internal/external links)
- Added visual snapshot comparison with before/after screenshots
- Enhanced export capabilities (PDF, CSV) and sharing features
- Added customizable analysis sections with show/hide options
- Complete UI/UX overhaul with glassmorphism, animations, and modern design
- Updated backend Playwright service to support screenshot capture
- Added comprehensive TypeScript types for new features

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "critters": "^0.0.25",
     "dagre": "^0.8.5",
     "date-fns": "^3.6.0",
+    "diff-dom": "^4.2.8",
     "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "framer-motion": "^11.18.2",
