--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "playwright": "^1.53.2",
     "puppeteer": "^24.11.1",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-grid-layout": "^1.5.2",
     "react-hot-toast": "^2.5.2",
